--- a/Lesson-1/Registration.html
+++ b/Lesson-1/Registration.html
@@ -43,70 +43,70 @@
         <div class="container">
             <div class="top__catalog">
                 <div class="top__catalog__left">
-                    <p class="top__catalog__text">SHOPPING CART </p>
+                    <p class="top__catalog__text">REGISTRATION </p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="shop_middle container">
-        <div class="shop_middle_left">
-            <a href="#" class="link_card_shop">
-                <div class="card_shop_1">
-                    <img class="shop_image_1" src="../Lesson-1/img/img3.svg" alt="photo">
-                    <div class="card_information">
-                        <p class="text_shop_1">MANGO PEOPLE <br> T-SHIRT</p>
-                        <p class="text_shop_2">Price: <span class="text_shop_2_2">$300</span> </p>
-                        <p class="text_shop_2">Color: Red</p>
-                        <p class="text_shop_2">Size: Xl </p>
-                        <p class="text_shop_2">Quantity: </p>
-                        <div class="number_inside_card">2</div>
-                    </div>
-                </div>
-            </a>
-            <div class="block_shop"></div>
-            <a href="#" class="link_card_shop">
-                <div class="card_shop_1">
-                    <img class="shop_image_1" src="../Lesson-1/img/img7.svg" alt="photo">
-                    <div class="card_information">
-                        <p class="text_shop_1">MANGO PEOPLE <br> T-SHIRT</p>
-                        <p class="text_shop_2">Price: <span class="text_shop_2_2">$300</span> </p>
-                        <p class="text_shop_2">Color: Red</p>
-                        <p class="text_shop_2">Size: Xl </p>
-                        <p class="text_shop_2">Quantity: </p>
-                        <div class="number_inside_card">2</div>
-                    </div>
-                </div>
-            </a>
-            <div class="botom_shop_buttons">
-                <a class="left_shop_button" href="#">
-                    <p class="text_shop_link">CLEAR SHOPPING CART</p>
-                </a>
-                <a class="right_shop_button" href="#">
-                    <p class="text_shop_link">CONTINUE SHOPPING</p>
-                </a>
+    <div class="registration_middle container">
+        <div class="registration_middle_left">
+            <p class="text_registration">Your Name</p>
+            <input class="shop_input_1" id="name" placeholder="First Name" autofocus required pattern="\S+[А-яа-я]">
+            <input class="shop_input_1" id="name" placeholder="Last Name" required pattern="\S+[А-яа-я]">
+            <div class="gender">
+                <p><input class="Male" name="gender" type="radio" value="Male"> Male</p>
+                <p><input class="Female" name="gender" type="radio" value="Female"> Female</p>
             </div>
+            <p class="text_registration">Login details</p>
+            <input class="shop_input_1" id="email" placeholder="Email" required pattern="\S+@[a-z]+.[a-z]+">
+            <input class="shop_input_1" id="userPassword" type="password" placeholder="Password">
+            <p class="text_registration_bottom">Please use 8 or more characters, with at least 1 number and a mixture of
+                uppercase and lowercase letters
+            </p>
+            <a class="button_registration" href="#">
+                <p class="text_button_registration">JOIN NOW</p>
+                <img class="img_button_registration" src="../Lesson-1/img/Strelka.svg" alt="photo">
+            </a>
         </div>
-
-        <div class="shop_middle_right">
-            <p class="hearing_input">SHIPPING ADRESS</p>
-            <div class="shop_input">
-                <input class="shop_input_1" type="text" placeholder="Bangladesh">
-                <input class="shop_input_1" type="text" placeholder="State">
-                <input class="shop_input_1" type="text" placeholder="Postcode / Zip">
+        <div class="registration_middle_right">
+            <div class="text_section">
+                <p class="text_section_1">LOYALTY HAS ITS PERKS</p>
+                <P class="text_section_2">Get in on the loyalty program where you can earn points and unlock serious
+                    perks. Starting with
+                    these
+                    as
+                    soon as you join:</P>
             </div>
-            <a class="button_bottom_shop" href="#">
-                <p class="text_button_shop">GET A QUOTE</p>
-            </a>
-            <div class="confurm_basket">
-                <p class="text_confurm_1">SUB TOTAL $900</p>
-                <p class="text_confurm_2">GRAND TOTAL <span class="text_shop_2_2"> $900 </span></p>
-                <hr class="hr">
-                <a class="confurm_button" href="#">PROCEED TO CHECKOUT</a>
+            <div class="reg_bottom">
+                <div class="reg_bottom_left">
+                    <div class="img_left_reg">
+                        <img src="../Lesson-1/img/Galka.svg" alt="">
+                    </div>
+                    <div class="img_left_reg">
+                        <img src="../Lesson-1/img/Galka.svg" alt="">
+                    </div>
+                    <div class="img_left_reg">
+                        <img src="../Lesson-1/img/Galka.svg" alt="">
+                    </div>
+                    <div class="img_left_reg">
+                        <img src="../Lesson-1/img/Galka.svg" alt="">
+                    </div>
+                    <div class="img_left_reg">
+                        <img src="../Lesson-1/img/Galka.svg" alt="">
+                    </div>
+                </div>
+                <div class="reg_bottom_right">
+                    <p class="text_section_3">15% off welcome offer</p>
+                    <p class="text_section_3">Free shipping, returns and exchanges on all orders</p>
+                    <p class="text_section_3">$10 off a purchase on your birthday</p>
+                    <p class="text_section_3">Early access to products</p>
+                    <p class="text_section_3">Exclusive offers & rewards</p>
+                </div>
+
             </div>
         </div>
     </div>
-
     <div class="container__2">
         <div class="footer__background">
             <div class="container">
@@ -154,5 +154,4 @@
             </div>
         </div>
     </footer>
-
 </body>
