--- a/Lesson-1/Registration.html
+++ b/Lesson-1/Registration.html
@@ -70,14 +70,14 @@
             </a>
         </div>
         <div class="registration_middle_right">
-            <div class="text_section">
+            <section class="text_section">
                 <p class="text_section_1">LOYALTY HAS ITS PERKS</p>
                 <P class="text_section_2">Get in on the loyalty program where you can earn points and unlock serious
                     perks. Starting with
                     these
                     as
                     soon as you join:</P>
-            </div>
+            </section>
             <div class="reg_bottom">
                 <div class="reg_bottom_left">
                     <div class="img_left_reg">
@@ -96,13 +96,13 @@
                         <img src="../Lesson-1/img/Galka.svg" alt="">
                     </div>
                 </div>
-                <div class="reg_bottom_right">
+                <section class="reg_bottom_right">
                     <p class="text_section_3">15% off welcome offer</p>
                     <p class="text_section_3">Free shipping, returns and exchanges on all orders</p>
                     <p class="text_section_3">$10 off a purchase on your birthday</p>
                     <p class="text_section_3">Early access to products</p>
                     <p class="text_section_3">Exclusive offers & rewards</p>
-                </div>
+                </section>
 
             </div>
         </div>
