--- a/Lesson-1/Shop.html
+++ b/Lesson-1/Shop.html
@@ -50,9 +50,9 @@
     </div>
 
     <div class="shop_middle container">
-        <div class="shop_middle_left">
+        <section class="shop_middle_left">
             <a href="#" class="link_card_shop">
-                <div class="card_shop_1">
+                <figure class="card_shop_1">
                     <img class="shop_image_1" src="../Lesson-1/img/img3.svg" alt="photo">
                     <div class="card_information">
                         <p class="text_shop_1">MANGO PEOPLE <br> T-SHIRT</p>
@@ -62,11 +62,11 @@
                         <p class="text_shop_2">Quantity: </p>
                         <div class="number_inside_card">2</div>
                     </div>
-                </div>
+                </figure>
             </a>
             <div class="block_shop"></div>
             <a href="#" class="link_card_shop">
-                <div class="card_shop_1">
+                <figure class="card_shop_1">
                     <img class="shop_image_1" src="../Lesson-1/img/img7.svg" alt="photo">
                     <div class="card_information">
                         <p class="text_shop_1">MANGO PEOPLE <br> T-SHIRT</p>
@@ -76,7 +76,7 @@
                         <p class="text_shop_2">Quantity: </p>
                         <div class="number_inside_card">2</div>
                     </div>
-                </div>
+                </figure>
             </a>
             <div class="botom_shop_buttons">
                 <a class="left_shop_button" href="#">
@@ -86,7 +86,7 @@
                     <p class="text_shop_link">CONTINUE SHOPPING</p>
                 </a>
             </div>
-        </div>
+        </section>
 
         <div class="shop_middle_right">
             <p class="hearing_input">SHIPPING ADRESS</p>
