--- a/Lesson-1/catalog.html
+++ b/Lesson-1/catalog.html
@@ -46,8 +46,12 @@
                     <p class="top__catalog__text">NEW ARRIVALS </p>
                 </div>
                 <div class="top__catalog__right">
-                    <p class="top__catalog__text__right">HOME / MEN / <span class="top__catalog__text__right__2">NEW
-                            ARRIVALS</span> </p>
+                    <a href="#" class="top__catalog__text__right">HOME</a>
+                    <p>/</p>
+                    <a href="#" class="top__catalog__text__right">MEN</a>
+                    <p>/</p>
+                    <a href="#" class="top__catalog__text__right">NEW
+                        ARRIVALS</a>
                 </div>
             </div>
         </div>
@@ -60,10 +64,64 @@
                     <a href="#"></a>
                 </summary>
                 <div class="menu__size__left">
-                    <p><input class="input__menu" type="checkbox" name="a" value="1417"> XS</p>
-                    <p><input class="input__menu" type="checkbox" name="a" value="1680"> S</p>
-                    <p><input class="input__menu" type="checkbox" name="a" value="1883"> M</p>
-                    <p><input class="input__menu" type="checkbox" name="a" value="1934"> L</p>
+
+
+                    <div class="acor-container">
+                        <div class="block_catalog"></div>
+                        <input type="radio" name="acor" id="acor1" checked="checked" />
+                        <label for="acor1">CATEGORY</label>
+                        <div class="acor-body">
+                            <a class="asd" href="#">Accessories</a>
+                            <a class="asd" href="#">Bags</a>
+                            <a class="asd" href="#">Denim</a>
+                            <a class="asd" href="#">Hoodies & Sweatshirts</a>
+                            <a class="asd" href="#">Jackets & Coats</a>
+                            <a class="asd" href="#">Polos</a>
+                            <a class="asd" href="#">Shirts</a>
+                            <a class="asd" href="#">Shoes</a>
+                            <a class="asd" href="#">Sweaters & Knits</a>
+                            <a class="asd" href="#">T-Shirts</a>
+                            <a class="asd" href="#">Tanks</a>
+                        </div>
+                        <div class="block_catalog"></div>
+                        <input type="radio" name="acor" id="acor2" />
+
+                        <label for="acor2">BRAND</label>
+                        <div class="acor-body">
+                            <a class="asd" href="#">Accessories</a>
+                            <a class="asd" href="#">Bags</a>
+                            <a class="asd" href="#">Denim</a>
+                            <a class="asd" href="#">Hoodies & Sweatshirts</a>
+                            <a class="asd" href="#">Jackets & Coats</a>
+                            <a class="asd" href="#">Polos</a>
+                            <a class="asd" href="#">Shirts</a>
+                            <a class="asd" href="#">Shoes</a>
+                            <a class="asd" href="#">Sweaters & Knits</a>
+                            <a class="asd" href="#">T-Shirts</a>
+                            <a class="asd" href="#">Tanks</a>
+                        </div>
+                        <div class="block_catalog"></div>
+                        <input type="radio" name="acor" id="acor3" />
+                        <label for="acor3">DESIGNER</label>
+                        <div class="acor-body">
+                            <a class="asd" href="#">Accessories</a>
+                            <a class="asd" href="#">Bags</a>
+                            <a class="asd" href="#">Denim</a>
+                            <a class="asd" href="#">Hoodies & Sweatshirts</a>
+                            <a class="asd" href="#">Jackets & Coats</a>
+                            <a class="asd" href="#">Polos</a>
+                            <a class="asd" href="#">Shirts</a>
+                            <a class="asd" href="#">Shoes</a>
+                            <a class="asd" href="#">Sweaters & Knits</a>
+                            <a class="asd" href="#">T-Shirts</a>
+                            <a class="asd" href="#">Tanks</a>
+                        </div>
+
+                    </div>
+
+
+
+
                 </div>
             </details>
             <div class="main__page__right">
@@ -75,10 +133,10 @@
                         <a href="#"></a>
                     </summary>
                     <div class="menu__size">
-                        <p><input class="input__menu" type="checkbox" name="a" value="1417"> XS</p>
-                        <p><input class="input__menu" type="checkbox" name="a" value="1680"> S</p>
-                        <p><input class="input__menu" type="checkbox" name="a" value="1883"> M</p>
-                        <p><input class="input__menu" type="checkbox" name="a" value="1934"> L</p>
+                        <p><input class="input__menu" type="checkbox" name="a" value="XS"> XS</p>
+                        <p><input class="input__menu" type="checkbox" name="a" value="S"> S</p>
+                        <p><input class="input__menu" type="checkbox" name="a" value="M"> M</p>
+                        <p><input class="input__menu" type="checkbox" name="a" value="L"> L</p>
                     </div>
                 </details>
                 <p class="page__1">PRICE</p>
@@ -270,6 +328,16 @@
     </div>
     <div class="container">
         <div class="pages">
+            <a class="vector_left" href="#"></a>
+            <a class="vector_number" href="#">1</a>
+            <a class="vector_number" href="#">2</a>
+            <a class="vector_number" href="#">3</a>
+            <a class="vector_number" href="#">4</a>
+            <a class="vector_number" href="#">5</a>
+            <a class="vector_number" href="#">6</a>
+            <a class="vector_number_2" href="#">.....</a>
+            <a class="vector_number_2" href="#">20</a>
+            <a class="vector_right" href="#"></a>
         </div>
     </div>
 
@@ -356,5 +424,8 @@
         </div>
     </footer>
 </body>
+
+
+
 
 </html>
