--- a/Lesson-1/index.html
+++ b/Lesson-1/index.html
@@ -28,10 +28,10 @@
                 </div>
                 <div class="block_3">
                     <details>
-                        <summary>
-                            <a href="#" class="menu__img"></a>
+                        <summary class="menu__img">
+                            <a href="#"></a>
                         </summary>
-                        <div class="menu">
+                        <nav class="menu">
                             <p class="menu__text">MENU</p>
                             <h3 class="menu__main">MAN</h3>
                             <a href="#" class="menu__link">Accessories</a>
@@ -51,7 +51,7 @@
                             <a href="#" class="menu__link">T-Shirts</a>
                             <a href="#" class="menu__link">Shirts</a>
                             <a href="#" class="menu__link">Bags</a>
-                        </div>
+                        </nav>
                     </details>
 
                 </div>
