--- a/Lesson-1/Product.html
+++ b/Lesson-1/Product.html
@@ -52,7 +52,6 @@
                     <p>/</p>
                     <a href="#" class="top__catalog__text__right">NEW
                         ARRIVALS</a>
-
                 </div>
             </div>
         </div>
@@ -69,7 +68,7 @@
             <a href="" class="pointer__right">
                 <img src="../Lesson-1/img/pointer_right.svg" alt="photo">
             </a>
-            <div class="middle_product container">
+            <section class="middle_product container">
                 <p class="middle_product_text_1">WOMEN COLLECTION</p>
                 <div class="middle_product_block"></div>
                 <p class="middle_product_text_2">MOSCHINO CHEAP AND CHIC</p>
@@ -88,7 +87,7 @@
                     <a href="#" class="link_middle_product"></a>
                 </div>
                 <a href="#" class="link_middle_product_button"></a>
-            </div>
+            </section>
         </div>
     </div>
 
@@ -156,7 +155,7 @@
             </div>
         </section>
     </div>
-
+    ы
     <div class="bottom_block_product"></div>
 
     <div class="container__2">
