--- a/Lesson-1/index.html
+++ b/Lesson-1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,13 +15,13 @@
         <div class="container">
             <nav class="header__inside">
                 <div class="block">
-                    <a href="#" class="img__main"></a>
+                    <a href="../Lesson-1/index.html" class="img__main"></a>
                 </div>
                 <div class="block_1">
                     <img src="../Lesson-1/img/h2.svg" alt="photo">
                 </div>
                 <div class="block_2">
-                    <form action="">
+                    <form action="URL">
                         <input type="text" class="button">
                         <button type="submit"></button>
                     </form>
@@ -32,7 +32,14 @@
                             <a href="#"></a>
                         </summary>
                         <nav class="menu">
-                            <p class="menu__text">MENU</p>
+                            <div class="start_menu">
+                                <p class="menu__text">MENU</p>
+                                <a class="menu_close" href="../Lesson-1/index.html">
+                                    <div>
+                                        <img src="../Lesson-1/img/KREST.svg" alt="n">
+                                    </div>
+                                </a>
+                            </div>
                             <h3 class="menu__main">MAN</h3>
                             <a href="#" class="menu__link">Accessories</a>
                             <a href="#" class="menu__link">Bags</a>
@@ -53,13 +60,12 @@
                             <a href="#" class="menu__link">Bags</a>
                         </nav>
                     </details>
-
                 </div>
                 <div class="block_4">
-                    <a href="#" class="img__catalog"></a>
+                    <a href="../Lesson-1/Registration.html" class="img__catalog"></a>
                 </div>
                 <div class="block_5">
-                    <a href="#" class="img__basket"></a>
+                    <a href="../Lesson-1/Shop.html" class="img__basket"></a>
                 </div>
             </nav>
         </div>
@@ -91,7 +97,7 @@
                 </a>
             </div>
             <div class="middle__block__1">
-                <a href="#" class="button__middle">
+                <a href="../Lesson-1/catalog.html" class="button__middle">
                     <div class="text__inside">HOT DEAL <br> <span class="big__text">FOR MEN</span>
                     </div>
                 </a>
@@ -305,9 +311,11 @@
                             <span class="text__footer__3">FOR OUR NEWLETTER AND PROMOTION</span>
                         </p>
                         <div class="footer__placeholder">
-                            <div><input type="input" placeholder="Enter Your Email" class="input">
+                            <div>
+                                <input type="email" placeholder="Enter Your Email" class="enter_email">
                             </div>
-                            <div><a href="#" class="footer_button"></a>
+                            <div>
+                                <a href="#" class="footer_button"></a>
                             </div>
                             <div class="footer_button__2">
                                 <a href="#" class="footer_button__3"></a>
@@ -326,10 +334,26 @@
                     <p class="bottom__content__text">© 2021 Brand All Rights Reserved.</p>
                 </div>
                 <div class="bottom__content__right">
-                    <a href="#" class="facebook"></a>
-                    <a href="#" class="instagram"></a>
-                    <a href="#" class="P"></a>
-                    <a href="#" class="twitter"></a>
+                    <a href="https://www.facebook.com">
+                        <div class="socials__item">
+                            <img src="../Lesson-1/img/facebook_2.svg" alt="facebook">
+                        </div>
+                    </a>
+                    <a href="https://www.instagram.com/">
+                        <div class="socials__item">
+                            <img src="../Lesson-1/img/Instagram.svg" alt="Instagram">
+                        </div>
+                    </a>
+                    <a href="https://www.pinterest.ru/">
+                        <div class="socials__item">
+                            <img src="../Lesson-1/img/PP.svg" alt="Pinterest">
+                        </div>
+                    </a>
+                    <a href="https://twitter.com/?lang=ru">
+                        <div class="socials__item">
+                            <img src="../Lesson-1/img/TWITTER.svg" alt="Twitter">
+                        </div>
+                    </a>
 
                 </div>
             </div>
