--- a/Lesson-1/Product.html
+++ b/Lesson-1/Product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,25 +15,50 @@
         <div class="container">
             <nav class="header__inside">
                 <div class="block">
-                    <a href="#" class="img__main"></a>
+                    <a href="../Lesson-1/index.html" class="img__main"></a>
                 </div>
                 <div class="block_1">
                     <img src="../Lesson-1/img/h2.svg" alt="photo">
                 </div>
                 <div class="block_2">
-                    <form action="">
+                    <form action="form">
                         <input type="text" class="button">
                         <button type="submit"></button>
                     </form>
                 </div>
                 <div class="block_3">
-                    <img src="../Lesson-1/img/h3.svg" alt="photo">
+                    <details>
+                        <summary class="menu__img">
+                            <a href="#"></a>
+                        </summary>
+                        <nav class="menu">
+                            <p class="menu__text">MENU</p>
+                            <h3 class="menu__main">MAN</h3>
+                            <a href="#" class="menu__link">Accessories</a>
+                            <a href="#" class="menu__link">Bags</a>
+                            <a href="#" class="menu__link">Denim</a>
+                            <a href="#" class="menu__link">T-Shirts</a>
+                            <h3 class="menu__main">WOMAN</h3>
+                            <a href="#" class="menu__link">Accessories</a>
+                            <a href="#" class="menu__link">Jackets & Coats</a>
+                            <a href="#" class="menu__link">Polos</a>
+                            <a href="#" class="menu__link">T-Shirts</a>
+                            <a href="#" class="menu__link">Shirts</a>
+                            <h3 class="menu__main">KIDS</h3>
+                            <a href="#" class="menu__link">Accessories</a>
+                            <a href="#" class="menu__link">Jackets & Coats</a>
+                            <a href="#" class="menu__link">Polos</a>
+                            <a href="#" class="menu__link">T-Shirts</a>
+                            <a href="#" class="menu__link">Shirts</a>
+                            <a href="#" class="menu__link">Bags</a>
+                        </nav>
+                    </details>
                 </div>
                 <div class="block_4">
-                    <a href="#" class="img__catalog"></a>
+                    <a href="../Lesson-1/Registration.html" class="img__catalog"></a>
                 </div>
                 <div class="block_5">
-                    <a href="#" class="img__basket"></a>
+                    <a href="../Lesson-1/Shop.html" class="img__basket"></a>
                 </div>
             </nav>
         </div>
@@ -46,11 +71,11 @@
                     <p class="top__catalog__text">NEW ARRIVALS </p>
                 </div>
                 <div class="top__catalog__right">
-                    <a href="#" class="top__catalog__text__right">HOME</a>
+                    <a href="../Lesson-1/index.html" class="top__catalog__text__right">HOME</a>
                     <p>/</p>
-                    <a href="#" class="top__catalog__text__right">MEN</a>
+                    <a href="../Lesson-1/catalog.html" class="top__catalog__text__right">MEN</a>
                     <p>/</p>
-                    <a href="#" class="top__catalog__text__right">NEW
+                    <a href=".//Product.html" class="top__catalog__text__right">NEW
                         ARRIVALS</a>
                 </div>
             </div>
@@ -175,7 +200,7 @@
                             <span class="text__footer__3">FOR OUR NEWLETTER AND PROMOTION</span>
                         </p>
                         <div class="footer__placeholder">
-                            <div><input type="input" placeholder="Enter Your Email" class="input">
+                            <div><input type="email" placeholder="Enter Your Email" class="enter_email">
                             </div>
                             <div><a href="#" class="footer_button"></a>
                             </div>
@@ -196,10 +221,26 @@
                     <p class="bottom__content__text">© 2021 Brand All Rights Reserved.</p>
                 </div>
                 <div class="bottom__content__right">
-                    <a href="#" class="facebook"></a>
-                    <a href="#" class="instagram"></a>
-                    <a href="#" class="P"></a>
-                    <a href="#" class="twitter"></a>
+                    <a href="https://www.facebook.com">
+                        <div class="socials__item">
+                            <img src="../Lesson-1/img/facebook_2.svg" alt="facebook">
+                        </div>
+                    </a>
+                    <a href="https://www.instagram.com/">
+                        <div class="socials__item">
+                            <img src="../Lesson-1/img/Instagram.svg" alt="Instagram">
+                        </div>
+                    </a>
+                    <a href="https://www.pinterest.ru/">
+                        <div class="socials__item">
+                            <img src="../Lesson-1/img/PP.svg" alt="Pinterest">
+                        </div>
+                    </a>
+                    <a href="https://twitter.com/?lang=ru">
+                        <div class="socials__item">
+                            <img src="../Lesson-1/img/TWITTER.svg" alt="Twitter">
+                        </div>
+                    </a>
 
                 </div>
             </div>
