--- a/Lesson-1/index.html
+++ b/Lesson-1/index.html
@@ -34,7 +34,7 @@
                         <nav class="menu">
                             <div class="start_menu">
                                 <p class="menu__text">MENU</p>
-                                <a class="menu_close" href="../Lesson-1/index.html">
+                                <a class="menu_close" href="#">
                                     <div>
                                         <img src="../Lesson-1/img/KREST.svg" alt="n">
                                     </div>
@@ -314,12 +314,9 @@
                             <div>
                                 <input type="email" placeholder="Enter Your Email" class="enter_email">
                             </div>
-                            <div>
-                                <a href="#" class="footer_button"></a>
-                            </div>
-                            <div class="footer_button__2">
-                                <a href="#" class="footer_button__3"></a>
-                            </div>
+                            <a href="#" class="footer_button">
+                                <p class="footer_button_text">Subscribe</p>
+                            </a>
                         </div>
                     </div>
                 </div>
