--- a/Lesson-1/Registration.html
+++ b/Lesson-1/Registration.html
@@ -30,14 +30,16 @@
                     <details>
                         <summary class="menu__img">
                             <a href="#"></a>
-                            <a class="menu_close" href="../Lesson-1/index.html">
-                                <div>
-                                    <img src="../Lesson-1/img/KREST.svg" alt="n">
-                                </div>
-                            </a>
                         </summary>
                         <nav class="menu">
-                            <p class="menu__text">MENU</p>
+                            <div class="start_menu">
+                                <p class="menu__text">MENU</p>
+                                <a class="menu_close" href="#">
+                                    <div>
+                                        <img src="../Lesson-1/img/KREST.svg" alt="n">
+                                    </div>
+                                </a>
+                            </div>
                             <h3 class="menu__main">MAN</h3>
                             <a href="#" class="menu__link">Accessories</a>
                             <a href="#" class="menu__link">Bags</a>
@@ -154,13 +156,12 @@
                             <span class="text__footer__3">FOR OUR NEWLETTER AND PROMOTION</span>
                         </p>
                         <div class="footer__placeholder">
-                            <div><input type="email" placeholder="Enter Your Email" class="enter_email">
+                            <div>
+                                <input type="email" placeholder="Enter Your Email" class="enter_email">
                             </div>
-                            <div><a href="#" class="footer_button"></a>
-                            </div>
-                            <div class="footer_button__2">
-                                <a href="#" class="footer_button__3"></a>
-                            </div>
+                            <a href="#" class="footer_button">
+                                <p class="footer_button_text">Subscribe</p>
+                            </a>
                         </div>
                     </div>
                 </div>
