--- a/Lesson-1/Shop.html
+++ b/Lesson-1/Shop.html
@@ -32,7 +32,14 @@
                             <a href="#"></a>
                         </summary>
                         <nav class="menu">
-                            <p class="menu__text">MENU</p>
+                            <div class="start_menu">
+                                <p class="menu__text">MENU</p>
+                                <a class="menu_close" href="#">
+                                    <div>
+                                        <img src="../Lesson-1/img/KREST.svg" alt="n">
+                                    </div>
+                                </a>
+                            </div>
                             <h3 class="menu__main">MAN</h3>
                             <a href="#" class="menu__link">Accessories</a>
                             <a href="#" class="menu__link">Bags</a>
@@ -127,7 +134,9 @@
                 <p class="text_confurm_1">SUB TOTAL $900</p>
                 <p class="text_confurm_2">GRAND TOTAL <span class="text_shop_2_2"> $900 </span></p>
                 <hr class="hr">
-                <a class="confurm_button" href="#">PROCEED TO CHECKOUT</a>
+                <a class="confurm_button" href="#">
+                    <p class="confurm_button_text">PROCEED TO CHECKOUT</p>
+                </a>
             </div>
         </div>
     </div>
@@ -149,13 +158,12 @@
                             <span class="text__footer__3">FOR OUR NEWLETTER AND PROMOTION</span>
                         </p>
                         <div class="footer__placeholder">
-                            <div><input type="email" placeholder="Enter Your Email" class="enter_email">
+                            <div>
+                                <input type="email" placeholder="Enter Your Email" class="enter_email">
                             </div>
-                            <div><a href="#" class="footer_button"></a>
-                            </div>
-                            <div class="footer_button__2">
-                                <a href="#" class="footer_button__3"></a>
-                            </div>
+                            <a href="#" class="footer_button">
+                                <p class="footer_button_text">Subscribe</p>
+                            </a>
                         </div>
                     </div>
                 </div>
